[project]
name = "pytune_llm"
version = "0.0.0"
description = "PyTune LLM utilities"
requires-python = ">=3.12"

[tool.poetry]
name = "pytune_llm"                     # ← distribution en kebab-case
version = "0.1.0"
description = "Centralize LLM calls and settings for PyTune"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pytune_llm" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# --- Dépendances internes (modes DEV + PROD) ---

pytune_configuration = { git = "https://github.com/gdefombelle/pytune_configuration.git", branch = "main"}
simple_logger = { git = "https://github.com/gdefombelle/simple_logger.git", branch = "main"}


# --- LLM / Réseau / Tokenizer ---
openai = "^1.82.0"
httpx = "^0.27.2"                # évite "*", garde une fourche stable
pyyaml = "^6.0.2"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"
tiktoken = "^0.9.0"

# --- Provider optionnel local ---
# rends Ollama optionnel via un extra : pytune-llm[ollama]
ollama = { version = "^0.3.0", optional = true }

[tool.poetry.extras]
ollama = ["ollama"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.8"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
