[project]
name = "pytune_llm"
version = "0.1.0"
description = "Centralize LLM calls and settings for PyTune"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Gabriel de Fombelle", email = "gabriel.de.fombelle@gmail.com" }
]

dependencies = [
    # --- internes résolus via workspace root ---
    "pytune_configuration",
    "simple_logger",

    # --- LLM / réseau ---
    "openai>=1.82.0",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "tiktoken>=0.9.0",
    "cerebras_cloud_sdk",
    "jinja2>=3.1.6",

    # --- optionnels (ollama) ---
    "ollama; extra == \"ollama\"",
]

[project.optional-dependencies]
ollama = ["ollama"]

# ❌ PAS DE [tool.uv.sources] ICI
# (uniquement dans le workspace root)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytune_llm"]